--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       background-repeat: no-repeat;
       background-image: url("img/dance.jpg");
       background-size: cover;
-      background-position: center;
-      /*      background-size: 100% auto;*/
+      /* background-position: center; */
+           /* background-size: 100% auto; */
       /*      oryginalna wielkość*/
       /*      */
       /*      background-size: 100% 70%;*/
