--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       margin-top: 30px;
 
       background-repeat: no-repeat;
-      background-image: url("img/dance.jpg");
+      background-image: url("img/ptak_maly.jpg");
       background-size: cover;
-      /* background-position: center; */
+      background-position: center;
            /* background-size: 100% auto; */
       /*      oryginalna wielkość*/
       /*      */
